# AOC2025

./: .gitignore  README.md  justfile  pyproject.toml
day01/: main.py
day02/: main.py
day03/: main.py
day04/: main.py  using_convolution.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: main.py
day11/: main.py
