[project]
name = "aoc2025"
version = "0.1.0"
description = "Repo to solve Advent of Code 2025 problems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elf>=1.1.0",
    "ipython>=9.7.0",
    "mypy>=1.19.0",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pulp>=3.3.0",
    "ruff>=0.14.8",
    "rust-just>=1.43.1",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
]
